--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
   var stage;
 
-  var projectId = [Your ID Here];
+  var projectId = [676122032];
   var projectTitle = '';
   var turbo = false;
   var fullScreen = true;
